# OpenShell

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  dev-sandbox-policy.yaml  install-dev.sh  install.sh  mise.toml
.agent/skills/review-gitlab-mr/: SKILL.md
.agents/skills/build-from-issue/: SKILL.md
.agents/skills/create-github-issue/: SKILL.md
.agents/skills/create-github-pr/: SKILL.md
.agents/skills/create-spike/: SKILL.md
.agents/skills/debug-navigator-cluster/: SKILL.md
.agents/skills/fix-security-issue/: SKILL.md
.agents/skills/review-security-issue/: SKILL.md
.claude/: README.md
.claude/agent-memory/arch-doc-writer/: MEMORY.md
.claude/agent-memory/principal-engineer-reviewer/: MEMORY.md
.claude/agents/: arch-doc-writer.md  principal-engineer-reviewer.md
.github/workflows/: docker-build.yml  e2e.yml  publish.yml
architecture/: build-containers.md  gateway-security.md  gateway-single-node.md  gateway.md  sandbox-connect.md  sandbox.md  security-policy.md  system-architecture.md
crates/navigator-cli/: Cargo.toml
crates/navigator-cli/src/: main.rs
crates/navigator-cli/tests/: mtls_integration.rs  provider_commands_integration.rs
crates/navigator-core/: Cargo.toml  build.rs
crates/navigator-sandbox/: Cargo.toml
crates/navigator-sandbox/src/: lib.rs  main.rs  policy.rs  process.rs  proxy.rs
crates/navigator-sandbox/src/l7/: tls.rs
crates/navigator-sandbox/src/sandbox/: mod.rs
crates/navigator-sandbox/src/sandbox/linux/: landlock.rs  mod.rs  seccomp.rs
crates/navigator-server/: Cargo.toml
crates/navigator-server/src/: main.rs
crates/navigator-server/tests/: multiplex_tls_integration.rs
crates/openshell-cli/src/: ssh.rs
crates/openshell-cli/tests/: ensure_providers_integration.rs  mtls_integration.rs  provider_commands_integration.rs  sandbox_create_lifecycle_integration.rs  sandbox_name_fallback_integration.rs
crates/openshell-core/src/: config.rs
crates/openshell-driver-docker/src/: lib.rs  tests.rs
crates/openshell-driver-kubernetes/src/: config.rs  driver.rs  grpc.rs  main.rs
crates/openshell-driver-vm/src/: driver.rs
crates/openshell-policy/src/: lib.rs
crates/openshell-sandbox/: Cargo.toml
crates/openshell-sandbox/src/: grpc_client.rs  lib.rs  main.rs  opa.rs  policy.rs  process.rs  proxy.rs  ssh.rs  supervisor_session.rs
crates/openshell-sandbox/src/l7/: tls.rs
crates/openshell-server/src/: cli.rs  lib.rs  multiplex.rs  ssh_tunnel.rs  supervisor_session.rs
crates/openshell-server/src/compute/: mod.rs
crates/openshell-server/src/grpc/: mod.rs  sandbox.rs
crates/openshell-server/tests/: auth_endpoint_integration.rs  edge_tunnel_auth.rs  multiplex_integration.rs  multiplex_tls_integration.rs  supervisor_relay_integration.rs  ws_tunnel_integration.rs
deploy/docker/: Dockerfile.cli-macos  Dockerfile.cluster  Dockerfile.gateway  Dockerfile.gateway-macos  Dockerfile.python-wheels-macos  cluster-entrypoint.sh  cross-build.sh
deploy/helm/openshell/: values.yaml
deploy/kube/manifests/: openshell-helmchart.yaml
docker/: Dockerfile.factory  Dockerfile.server
docs/observability/: logging.mdx
docs/reference/: policy-schema.mdx  support-matrix.md
docs/sandboxes/: manage-sandboxes.mdx
docs/security/: best-practices.mdx
e2e/python/: test_sandbox_policy.py
e2e/rust/: e2e-docker.sh
e2e/rust/tests/: docker_gpu.rs
proto/: openshell.proto  sandbox.proto
scripts/: remote-deploy.sh
tasks/: cluster.toml  docker.toml  test.toml
tasks/scripts/: cluster-bootstrap.sh  cluster-deploy-fast.sh  cluster-push-component.sh  docker-build-component.sh  docker-publish-multiarch.sh
